Fix TwitchVodTable filter alignment on mobile

--- a/hsreplaynet/static/styles/deck_detail.scss
+++ b/hsreplaynet/static/styles/deck_detail.scss
@@ -189,10 +189,13 @@
 					}
 
 					.twitch-vod-table-filterables {
-						margin: 10px 10px 0 10px;
+						margin: 5px 10px 0;
+						display: flex;
+						flex-wrap: wrap;
+						justify-content: center;
 
 						& > .optional-select {
-							margin: 0 0.3em;
+							margin: 5px 0.3em 0;
 
 							&:first-child {
 								margin-left: 0;
